# avalon

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src_avalon/shapes/: circle.py  rectangle.py  shapes_base.py  square.py  triangle.py
unit_tests/test_shapes/: test_circle.py
