[build-system]
requires = ["setuptools"]

[project]
name = "avalon"
authors = [
    {name = "Richard Pattison", email = "rcpattison@gmail.com"},
    {name = "Mac Pattison", email = "mac.pattison@gmail.com"}
]
description = "Shared repo for exploratory jamming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "hypothesis",
    "pytest",
    "tqdm",
    "plotly",
    "nbformat",
    "ipykernel"
]
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "python-semantic-release ~=7.31.2"
]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install . --upgrade"

[project.urls]
"Homepage" = "https://github.com/fistprinciples/avalon"
